--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,6 @@
 /*********************** GENERAL STYLE & NORMALIZE ***********************/
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&display=swap');
+
 * {
     margin: 0;
     padding: 0;
@@ -6,6 +8,7 @@
 
 html, body {
     overflow: hidden;
+    font-family: 'Open Sans', sans-serif;
 }
 
 /*********************** CANVAS ***********************/
@@ -24,7 +27,7 @@ html, body {
 	left: 0;
 	width: 100%;
 	height: 100%;
-	background-color: #110A0D;
+	background-color: #000;
 	opacity: 1;
  	transition: 1s opacity;
 }
@@ -44,7 +47,7 @@ html, body {
     margin: -75px 0 0 -75px;
     border-radius: 50%;
     border: 3px solid transparent;
-    border-top-color: #EFD381;
+    border-top-color: #D90E1D;
     -webkit-animation: spin 2s linear infinite;
     animation: spin 2s linear infinite;
 }
@@ -58,7 +61,7 @@ html, body {
     bottom: 5px;
     border-radius: 50%;
     border: 3px solid transparent;
-    border-top-color: #DA6016;
+    border-top-color: #D90E1D;
     -webkit-animation: spin 3s linear infinite;
     animation: spin 3s linear infinite;
 }
@@ -71,7 +74,7 @@ html, body {
     bottom: 15px;
     border-radius: 50%;
     border: 3px solid transparent;
-    border-top-color: #EFD381;
+    border-top-color: #D90E1D;
     -webkit-animation: spin 1.5s linear infinite;
     animation: spin 1.5s linear infinite;
 }
@@ -115,7 +118,7 @@ html, body {
     position: absolute;
     bottom: 20px;
     right: 20px;
-    background-color: #110A0D;
+    background-color: #000;
     /* color: #231F20; */
     color: #EFE6DD;
     border-radius: 50%;
@@ -142,14 +145,15 @@ html, body {
 
 #controlsPanel .modal {
     border-radius: 5px;
-    background-color: #EFE6DD;
-    padding: 20px;
+    background-color: rgba(0, 0, 0, 0.8);
+    color: #fff;
+    padding: 20px 40px;
     text-align: center;
     margin: auto;
 }
 
 #controlsPanel .modal .instructions {
-    margin-top: 20px;
+    margin: 20px 0;
     text-align: left;
 }
 
@@ -163,7 +167,7 @@ html, body {
     margin-top: 20px;
     border-radius: 5px;
     padding: 10px 20px;
-    background-color: #110A0D;
+    background-color: #D90E1D;
     color: #EFE6DD;
     text-align: center;
     text-transform: uppercase;
