--- a/src/style.css
+++ b/src/style.css
@@ -4,6 +4,7 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 html, body {
@@ -171,4 +172,52 @@ html, body {
     padding: 10px 20px;
     text-align: center;
     text-transform: uppercase;
+}
+
+/* POINTS */
+.point {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+}
+
+.point:hover .text {
+    opacity: 1;
+}
+
+.point.visible .label {
+    transform: scale(1,1);
+}
+
+.point .label {
+    cursor: help;
+    background: rgba(0, 0, 0, 0.5);
+    border-radius: 50%;
+    height: 30px;
+    left: -15px;
+    line-height: 30px;
+    position: absolute;
+    text-align: center;
+    top: -15px;
+    width: 30px;
+    font-family: Helvetica, Arial, sans-serif;
+    color: #fff;
+    transform: scale(0, 0);
+    transition: transform 0.3s;
+}
+
+.point .text {
+    pointer-events: none;
+    position: absolute;
+    top: 30px;
+    left: -125px;
+    padding: 20px;
+    width:  250px;
+    background: rgba(0, 0, 0, 0.5);
+    color: #fff;
+    line-height: 1.3;
+    font-family: Helvetica, Arial, sans-serif;
+    font-size: 14px;
+    opacity: 0;
+    transition: opacity 0.3s;
 }
