--- a/src/style.css
+++ b/src/style.css
@@ -2,14 +2,42 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&display=swap');
 
 * {
+    box-sizing: border-box;
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
 }
 
 html, body {
     font-family: 'Open Sans', sans-serif;
     overflow: hidden;
+}
+
+.primaryBtn {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    background-color: #D90E1D;
+    border: none;
+    border-radius: 3px 12px;
+    color: #EFE6DD;
+    cursor: pointer;
+    margin-top: 20px;
+    opacity: 1;
+    padding: 10px 25px;
+    text-align: center;
+    text-transform: uppercase;
+    transition: background-color .3s, opacity .3s;
+}
+
+.primaryBtn:hover, .primaryBtn:active {
+    background-color: #850811;
+    border: none;
+    outline: none;
+}
+
+.primaryBtn.fadeOut {
+    opacity: 0;
+    z-index: -1;
 }
 
 /*********************** CANVAS ***********************/
@@ -22,10 +50,16 @@ html, body {
 
 /*********************** LOADING SCREEN SECTION ***********************/
 #loadingScreen {
+    align-items: center;
 	background-color: #000;
+    color: #fff;
+    display: flex;
+    flex-flow: column wrap;
 	height: 100%;
+    justify-content: center;
 	left: 0;
 	opacity: 1;
+    overflow: hidden;
 	position: absolute;
 	top: 0;
     transition: 1s opacity;
@@ -38,7 +72,12 @@ html, body {
     z-index: -1;
 }
 
-#loader {
+.instructions {
+    margin: 50px 0;
+}
+
+/* #loader {
+    margin-top: auto;
     -webkit-animation: spin 2s linear infinite;
     animation: spin 2s linear infinite;
     border: 3px solid transparent;
@@ -46,14 +85,11 @@ html, body {
     border-top-color: #D90E1D;
     display: block;
     height: 150px;
-    left: 50%;
-    margin: -75px 0 0 -75px;
-    position: relative;
-    top: 50%;
     width: 150px;
-}
+    margin: 50px 0;
+} */
 
-#loader:before {
+/* #loader:before {
     -webkit-animation: spin 3s linear infinite;
     animation: spin 3s linear infinite;
     bottom: 5px;
@@ -78,7 +114,7 @@ html, body {
     position: absolute;
     right: 15px;
     top: 15px;
-}
+} */
 
 /* ANIMATION */
 @-webkit-keyframes spin {
@@ -158,22 +194,6 @@ html, body {
     text-align: left;
 }
 
-/* CLOSE MODAL BTN */
-#controlsPanel .modal button {
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
-    background-color: #D90E1D;
-    border: none;
-    border-radius: 5px;
-    color: #EFE6DD;
-    cursor: pointer;
-    margin-top: 20px;
-    padding: 10px 20px;
-    text-align: center;
-    text-transform: uppercase;
-}
-
 /* POINTS */
 .point {
     position: absolute;
@@ -190,35 +210,34 @@ html, body {
 }
 
 .point .label {
-    cursor: help;
     background: rgba(0, 0, 0, 0.5);
     border-radius: 50%;
+    color: #fff;
+    cursor: help;
     height: 30px;
     left: -15px;
     line-height: 30px;
     position: absolute;
     text-align: center;
     top: -15px;
-    width: 30px;
-    font-family: Helvetica, Arial, sans-serif;
-    color: #fff;
     transform: scale(0, 0);
     transition: transform 0.3s;
+    width: 30px;
 }
 
 .point .text {
+    background: rgba(0, 0, 0, 0.5);
+    color: #fff;
+    font-family: Helvetica, Arial, sans-serif;
+    left: -125px;
+    line-height: 1.3;
+    opacity: 0;
+    padding: 20px;
     pointer-events: none;
     position: absolute;
     top: 30px;
-    left: -125px;
-    padding: 20px;
-    width:  250px;
-    background: rgba(0, 0, 0, 0.5);
-    color: #fff;
-    line-height: 1.3;
-    font-family: Helvetica, Arial, sans-serif;
-    opacity: 0;
     transition: opacity 0.3s;
+    width:  250px;
 }
 
 .point .text h2 {
