--- a/src/style.css
+++ b/src/style.css
@@ -12,6 +12,10 @@ html, body {
     overflow: hidden;
 }
 
+h2 {
+    font-size: 20px;
+}
+
 .primaryBtn {
     -webkit-appearance: none;
     -moz-appearance: none;
@@ -20,13 +24,13 @@ html, body {
     border: none;
     border-radius: 3px 12px;
     color: #EFE6DD;
-    cursor: pointer;
     margin-top: 20px;
-    opacity: 1;
+    opacity: 0;
     padding: 10px 25px;
+    pointer-events: none;
     text-align: center;
     text-transform: uppercase;
-    transition: background-color .3s, opacity .3s;
+    z-index: -1;
 }
 
 .primaryBtn:hover, .primaryBtn:active {
@@ -35,9 +39,12 @@ html, body {
     outline: none;
 }
 
-.primaryBtn.fadeOut {
-    opacity: 0;
-    z-index: -1;
+.primaryBtn.fadeIn {
+    cursor: pointer;
+    opacity: 1;
+    pointer-events: unset;
+    transition: background-color .3s, opacity .3s;
+    z-index: unset;
 }
 
 /*********************** CANVAS ***********************/
@@ -74,6 +81,23 @@ html, body {
 
 .instructions {
     margin: 50px 0;
+}
+
+.loader {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 4px;
+    background: #D90E1D;
+    transform: scaleX(0);
+    transform-origin: top left;
+    transition: transform 0.5s;
+}
+
+.loader.loaded {
+    transform: scaleX(0);
+    transform-origin: 100% 0;
+    transition: transform 1.5s ease-in-out;
 }
 
 /* #loader {
