--- a/src/style.css
+++ b/src/style.css
@@ -1,32 +1,41 @@
 /*********************** GENERAL STYLE & NORMALIZE ***********************/
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&display=swap');
 
+/*********************** GENERAL STYLE ***********************/
 * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
 
-html, body {
+html {
+    font-size: 62.5%;
+}
+
+body {
+    font-size: 1.6rem;
     font-family: 'Open Sans', sans-serif;
     overflow: hidden;
 }
 
 h2 {
-    font-size: 20px;
+    text-align: center;
+    margin-bottom: 2rem;
+    font-size: 2rem;
 }
 
+/* button */
 .primaryBtn {
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
     background-color: #D90E1D;
     border: none;
-    border-radius: 3px 12px;
+    border-radius: 0.3rem 1.2rem;
     color: #EFE6DD;
-    margin-top: 20px;
+    margin-top: 2rem;
     opacity: 0;
-    padding: 10px 25px;
+    padding: 1rem 2.5rem;
     pointer-events: none;
     text-align: center;
     text-transform: uppercase;
@@ -80,14 +89,14 @@ h2 {
 }
 
 .instructions {
-    margin: 50px 0;
+    margin: 5rem 0;
 }
 
 .loader {
     position: absolute;
     bottom: 0;
     width: 100%;
-    height: 4px;
+    height: 0.4rem;
     background: #D90E1D;
     transform: scaleX(0);
     transform-origin: top left;
@@ -100,72 +109,6 @@ h2 {
     transition: transform 1.5s ease-in-out;
 }
 
-/* #loader {
-    margin-top: auto;
-    -webkit-animation: spin 2s linear infinite;
-    animation: spin 2s linear infinite;
-    border: 3px solid transparent;
-    border-radius: 50%;
-    border-top-color: #D90E1D;
-    display: block;
-    height: 150px;
-    width: 150px;
-    margin: 50px 0;
-} */
-
-/* #loader:before {
-    -webkit-animation: spin 3s linear infinite;
-    animation: spin 3s linear infinite;
-    bottom: 5px;
-    border: 3px solid transparent;
-    border-radius: 50%;
-    border-top-color: #D90E1D;
-    content: "";
-    left: 5px;
-    position: absolute;
-    right: 5px;
-    top: 5px;
-}
-#loader:after {
-    -webkit-animation: spin 1.5s linear infinite;
-    animation: spin 1.5s linear infinite;
-    border: 3px solid transparent;
-    border-radius: 50%;
-    border-top-color: #D90E1D;
-    bottom: 15px;
-    content: "";
-    left: 15px;
-    position: absolute;
-    right: 15px;
-    top: 15px;
-} */
-
-/* ANIMATION */
-@-webkit-keyframes spin {
-    0%   {
-        -webkit-transform: rotate(0deg);
-        -ms-transform: rotate(0deg);
-        transform: rotate(0deg);
-    }
-    100% {
-        -webkit-transform: rotate(360deg);
-        -ms-transform: rotate(360deg);
-        transform: rotate(360deg);
-    }
-}
-@keyframes spin {
-    0%   {
-        -ms-transform: rotate(0deg);
-        -webkit-transform: rotate(0deg);
-        transform: rotate(0deg);
-    }
-    100% {
-        -ms-transform: rotate(360deg);
-        -webkit-transform: rotate(360deg);
-        transform: rotate(360deg);
-    }
-}
-
 /*********************** CONTROL INSTRUCTIONS SECTION ***********************/
 /* OPEN MODAL BTN */
 #controlsOpen {
@@ -175,14 +118,14 @@ h2 {
     background-color: #000;
     border: none;
     border-radius: 50%;
-    bottom: 20px;
+    bottom: 2rem;
     color: #EFE6DD;
     cursor: pointer;
-    font-size: 18px;
-    height: 40px;
+    font-size: 1.8rem;
+    height: 4rem;
     position: absolute;
-    right: 20px;
-    width: 40px;
+    right: 2rem;
+    width: 4rem;
 }
 
 /* MODAL */
@@ -206,19 +149,19 @@ h2 {
 
 #controlsPanel .modal {
     background-color: rgba(0, 0, 0, 0.8);
-    border-radius: 5px;
+    border-radius: 0.5rem;
     color: #fff;
     margin: auto;
-    padding: 20px 40px;
+    padding: 2rem 4rem;
     text-align: center;
 }
 
 #controlsPanel .modal .instructions {
-    margin: 20px 0;
+    margin: 2rem 0;
     text-align: left;
 }
 
-/* POINTS */
+/*********************** POINTS ***********************/
 .point {
     position: absolute;
     top: 50%;
@@ -238,36 +181,36 @@ h2 {
     border-radius: 50%;
     color: #fff;
     cursor: help;
-    height: 30px;
-    left: -15px;
-    line-height: 30px;
+    height: 3rem;
+    left: -1.5rem;
+    line-height: 3rem;
     position: absolute;
     text-align: center;
-    top: -15px;
+    top: -1.5rem;
     transform: scale(0, 0);
     transition: transform 0.3s;
-    width: 30px;
+    width: 3rem;
 }
 
 .point .text {
     background: rgba(0, 0, 0, 0.5);
     color: #fff;
     font-family: Helvetica, Arial, sans-serif;
-    left: -125px;
+    left: -12.5rem;
     line-height: 1.3;
     opacity: 0;
-    padding: 20px;
+    padding: 2rem;
     pointer-events: none;
     position: absolute;
-    top: 30px;
+    top: 3rem;
     transition: opacity 0.3s;
-    width:  250px;
+    width:  25rem;
 }
 
 .point .text h2 {
-    font-size: 16px;
+    font-size: 1.6rem;
 }
 
 .point .text p {
-    font-size: 14px;
+    font-size: 1.4rem;
 }
